--- a/Introducción a la terminal.ipynb
+++ b/Introducción a la terminal.ipynb
@@ -816,6 +816,40 @@
     "\n",
     "En caso de querer detener un proceso, deberemos lanzar el comando `kill #PID_NUMBER` en donde #PID_NUMBER es número del proceso. Por ejemplo si quisiera eliminar el proceso con código `258070` debería lanzar: `kill 258075`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afd3fec-b984-4cb9-b03e-dc5d6e307bca",
+   "metadata": {},
+   "source": [
+    "# TAREA\n",
+    "\n",
+    "Utilizando la consola de ubuntu 22.04 en WSL realizar:\n",
+    "\n",
+    "1. Crear una carpeta llamada `curso_open_foam`\n",
+    "2. Crear dentro de esa carpeta otras tres carpetas llamadas `archivos_1`, `archivos_2` y `archivos_3`.\n",
+    "3. Dentro de Archivos_1 crear tres documentos con extensión .sh llamados: `script_1.sh`, `script_2.sh` y `script_3.sh`. Deberán darles permisos de ejecución a estos archivos.\n",
+    "4. Mover `script_2.sh` a la carpeta `archivos_2` y lo mismo para el `script_3.sh` en su respectiva carpeta.\n",
+    "5. Con el comando `nano` modificar todos los scripts (uno por uno) y para que dentro digan de que archivo se trata. Ej: `echo \"Hola soy el script_1\"` (Comando echo).\n",
+    "6. Posterior a eso, parados dentro de la carpeta  `curso_open_foam` pero por fuera de las carpetas `archivos_1`, `archivos_2` y `archivos_3`. Deberán crear un .sh ejecutable que logre ejecutar de una sola vez los tres .sh que están dentro de las carpetas creadas. Esto debería sacar una salida similar a esta:\n",
+    "```\n",
+    "Hola soy el archivo n°1\n",
+    "Hola soy el archivo n°2\n",
+    "Hola soy el archivo n°3\n",
+    "```\n",
+    "\n",
+    "Al finalizar esta practica su arbol de archivos/carpetas se deberá ver de la siguiente forma:\n",
+    "```bash\n",
+    "└── curso_open_foam\n",
+    "    ├── archivos_1\n",
+    "    │   └── script_1.sh\n",
+    "    ├── archivos_2\n",
+    "    │   └── script_2.sh\n",
+    "    ├── archivos_3\n",
+    "    │   └── script_3.sh\n",
+    "    └── ejecución_global.sh\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -834,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
